# atwater

./: .gitignore  BUILD_PLAN.md  CONTRIBUTING.md  HANDOFF.md  NIGHTWATCH_PLAN.md  QUICKSTART.md  README.md  __init__.py  conftest.py  phase2a_report.md  pyproject.toml  requirements.txt
config/: openfang_hand.toml  settings.py
docs/: AGENT_DEVELOPMENT.md  ARCHITECTURE.md  BUILD_PLAN_16H.md  CONTEXT_TIPS.md  KNOWLEDGE_SCALING.md  MODEL_GUIDE.md  OPTUNA_INTEGRATION.md  TROUBLESHOOTING.md  TUNING_GUIDE.md
docs/research/: CREATIVE_EVALUATION.md  EMBEDDINGS_AND_KNOWLEDGE.md  OPENFANG_DEEP_DIVE.md  OPTUNA_ADVANCED.md  PRODUCTION_PATTERNS.md  SEARCH_LOG.md  SMALL_MODELS.md  SYNTHESIS.md  TOOLING.md
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  consolidator_agent.py  creator.py  director.py  diversity_guard.py  grader.py
src/config/: agent_configs.py
src/evaluation/: __init__.py  cascade.py  fast_gate.py  llm_gate.py  medium_gate.py  process_rewards.py
src/knowledge/: __init__.py  clustering.py  consolidator.py  graph.py  models.py
src/learning/: __init__.py  reflexion.py  (+3 more)
tests/: __init__.py  conftest.py  test_checkpointing.py  test_circuit_breaker.py  test_collapse.py  test_consolidation.py  test_dashboard.py  test_fallbacks.py  test_health_check.py  test_knowledge_graph.py  test_knowledge_store.py  test_memory.py  test_monitoring.py  test_optuna_phase3.py  test_rate_limiter.py  test_reflexion.py  test_scale.py  test_scale_v2.py  test_shutdown.py  test_strategy.py  test_temperature.py
tools/: analyze_run.py  benchmark_models.py  export_report.py
(+34 files in other folders)
