[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atwater"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "optuna>=3.6",
    "optunahub>=0.4",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
